# rtbBacktester

./: .gitmodules  LICENCE.md  README.md  count.py
rtbBacktester/: chart.html  demo.py  main.py  main_Dev.py  pyproject.toml
rtbBacktester/results/: AAPL.csv
rtbBacktester/rtbbacktester/: Backtester.py  BacktesterOptions.py  ExtendedEnum.py  IndicatorCombination.py  IndicatorImportManager.py  IndicatorManager.py  Strategy.py  StrategyStates.py  Ticker.py  TickerImportManager.py  __init__.py
rtbBacktester/rtbbacktester/rtbTickers/: .gitignore  ForexLotSizes.py  TickerBaseclass.py  __init__.py
rtbBacktester/rtbbacktester/rtbTickers/Tickers/: __init__.py
rtbBacktester/rtbbacktester/rtbTickers/Tickers/Forex/: EURUSD.py  ForexLotSizes.py  __init__.py
rtbBacktester/rtbbacktester/rtbTickers/Tickers/Stocks/: Apple.py  __init__.py
