[tool.poetry]
name = "rtbbacktester"
version = "0.1.0"
description = ""
authors = ["BenjaminBeer <bigbenbeer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"
ta = "^0.10.2"
backtesting = "^0.3.3"
yfinance = "^0.2.31"
scipy = "^1.11.3"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
